--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <section class="avenue-messenger">
   <div class="agent-face">
     <div class="half">
-     <img class="agent circle" src="https://myfiles.space/user_files/127601_e31c146deadb8975/127601_custom_files/BodyEditor_20220715_154108834.jpg?8779" alt="Mirajane sstraus"></div>
+     <img class="agent circle" src="https://user-images.githubusercontent.com/106701602/194680855-873c65e2-e413-4938-b3ef-ad671cfc1569.jpg" alt="Mirajane sstraus"></div>
   </div>
 <div class="chat">
   <div class="chat-title">
@@ -104,12 +104,12 @@ function fakeMessage() {
   if ($('.message-input').val() != '') {
     return false;
   }
-  $('<div class="message loading new"><figure class="avatar"><img src="https://myfiles.space/user_files/127601_e31c146deadb8975/127601_custom_files/BodyEditor_20220715_154108834.jpg?8779" /></figure><span></span></div>').appendTo($('.mCSB_container'));
+  $('<div class="message loading new"><figure class="avatar"><img src="https://user-images.githubusercontent.com/106701602/194680855-873c65e2-e413-4938-b3ef-ad671cfc1569.jpg" /></figure><span></span></div>').appendTo($('.mCSB_container'));
   updateScrollbar();
 
   setTimeout(function() {
     $('.message.loading').remove();
-    $('<div class="message new"><figure class="avatar"><img src="https://myfiles.space/user_files/127601_e31c146deadb8975/127601_custom_files/BodyEditor_20220715_154108834.jpg?8779" /></figure>' + Fake[i] + '</div>').appendTo($('.mCSB_container')).addClass('new');
+    $('<div class="message new"><figure class="avatar"><img src="https://user-images.githubusercontent.com/106701602/194680855-873c65e2-e413-4938-b3ef-ad671cfc1569.jpg" /></figure>' + Fake[i] + '</div>').appendTo($('.mCSB_container')).addClass('new');
     setDate();
     updateScrollbar();
     i++;
