--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@ $(window).on('keydown', function(e) {
 })
 
 var Fake = [
-  'hola mi nombre es \'Mirajane y el tuyo?',
+  'hola meu nome é Mirajane, e voce?',
   'que bonito!!',
-  'hablame lindo, que necesitas',
-  'lamentablemente no te voy a poder ayudar',
-  'solamente que...',
+  'me fala bonito, que precisa',
+  'lamentablemente nao vôo te ajudar',
+  'somente que...',
   'mil disculpas ',
-  'tengo que irme',
-  'quisiera algun dia ser real',
+  'tenho que ir embora',
+  'quisera algun dia ser real',
   'pero..',
   'te conte que me casé com laxus',
   'fueron los mejores momentos',
